<resources>
    <string name="app_name">My Application</string>
    <string name="orange_text">This is an orange TextView</string>
    <string name="green_text">This is a green TextView</string>
    <string name="blue_text">This is a blue TextView</string>
    <string name="blue_button">This is a blue button</string>
    <string name="green_button">This is a green button</string>
    <string name="edit_text">This is an EditText</string>
    <string name="new_edittext">This is an new EditText</string>
    <string name="notify_me">Notify me :)</string>
    <string name="auto_backup">Auto Backup</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
