<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="133dp"
            android:layout_weight="1"
            android:background="@color/orange"
            android:gravity="center"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/orange_text" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/green"
            android:gravity="center"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/green_text" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/blue"
            android:gravity="center"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/blue_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="98dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@color/blue"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/blue_button" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="99dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:adjustViewBounds="false"
            android:scaleType="fitXY"
            android:src="@drawable/test"
            tools:ignore="ContentDescription" />

        <Button
            android:layout_width="0dp"
            android:layout_height="95dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@color/green"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/green_button" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="158dp"
        android:background="@color/orange"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text"
            android:inputType="text"
            tools:ignore="Autofill,HardcodedText" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_edittext"
            android:inputType="text"
            tools:ignore="Autofill,HardcodedText" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="328dp"
        android:background="@color/green"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="206dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/notify_me"
                android:textAppearance="?android:textAppearanceMedium" />

            <Switch
                android:layout_width="185dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/auto_backup"
                android:textAppearance="?android:textAppearanceSmall" />

        </LinearLayout>

        <RatingBar
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="false"
            android:numStars="5"
            android:progressTint="#D81B60"
            android:rating="4"
            android:stepSize="0.5"
            android:visibility="visible" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="370dp"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:text="@string/yes"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:text="@string/no"
                android:textAppearance="?android:textAppearanceMedium" />

        </RadioGroup>

    </LinearLayout>

</LinearLayout>